--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "lint": "eslint . --fix --cache"
   },
   "dependencies": {
-    "vue": "^3.5.25"
+    "chart.js": "^4.5.1",
+    "vue": "^3.5.25",
+    "vue-chartjs": "^5.3.3"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
