--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "lint": "eslint . --fix --cache"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.18",
     "chart.js": "^4.5.1",
+    "tailwindcss": "^4.1.18",
     "vue": "^3.5.25",
     "vue-chartjs": "^5.3.3"
   },
