--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "chart.js": "^4.5.1",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.25",
-    "vue-chartjs": "^5.3.3"
+    "vue-chartjs": "^5.3.3",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@tsconfig/node24": "^24.0.3",
