feat(api): add detect_emotion api

--- a/environment.yml
+++ b/environment.yml
@@ -16,6 +16,7 @@ dependencies:
     - tqdm>=4.65.0
     - opencv-contrib-python
     - pygame
+    - "fastapi[standard]"
 
 # Notes:
 # - This file requests the conda package `pytorch-cuda=12.8` so conda will
